--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </style>
 </head>
 <body>
-  <h1 id="pageTitle" style="display:none; margin-bottom: 20px; margin-left: 20px; font-size: 2em;">地震情報リスト</h1>
+  <h1 id="pageTitle" style="display:none; margin-bottom: 20px; margin-left: 20px; font-size: 40xp;">地震情報リスト</h1>
   <div id="quakeContainer"></div>
 
   <script>
